--- a/manage_app2/templates/cfg.html
+++ b/manage_app2/templates/cfg.html
@@ -2,8 +2,8 @@
 {% block content %}
 {{ super() }}
 <div class="title">
-        Используя ниже расположенные ссылки  
-        можно перейти в меню настройки конфигов коммутатора:
+        Используя ниже расположенные ссылки можно перейти к  
+        просмотру конфигурации и настройке коммутатора для тестов:
 </div>
 {%- block thirdmenu -%}
 <ul class="thirdmenu">
@@ -14,10 +14,11 @@
         {% endblock thirdmenu -%} 
 
 <div class="title">
-        Используя ниже расположенные ссылки  
-        можно перейти в меню загрузки файлов конфигурации:
+        Используя ссылку ниже  
+        можно перейти в меню по работе с файлами конфигурации:
 </div>
-<p><a href='/upload_file_cfg' target="_blank">Загрузка файла конфигурации в базу</a></li>
-    
+<ul>
+<li><a href='/upload_file_cfg' target="_blank">Загрузка файла конфигурации в базу</a></li>
+</ul>    
 </form>
 {% endblock content%}
