--- a/manage_app2/templates/cfg_from_table.html
+++ b/manage_app2/templates/cfg_from_table.html
@@ -3,15 +3,13 @@
 {% block content %}
 {{ super() }}
 
-<br>Используя нижерасположенную кнопку ЗАГРУЗКА КОНФИГУРАЦИИ ИЗ ФАЙЛА
-<br>можно добавить конфигурацию из файла {{filename}} на коммутатор.
+<br>Используя в таблице ниже кнопку - "НАСТРОЙКА КОНФИГУРАЦИИ"
+<br>можно добавить конфигурацию из файла на коммутатор.
  <p>ВНИМАНИЕ!</p>
- <p>загрузка будет проведена сразу после нажатия!</p>
- <p>загрузка пройдет на коммутаторе, 
-настройки которого указаны в таблице справа вверху
-"Текущие настройки подключения".</p>
-<p> Номер консольного порта можно настроить в МЕНЮ НАСТРОЕК</p>
-<br><hr><br>
+ <p>Загрузка конфигурации в коммутатор будет проведена сразу после нажатия!</p>
+ <p>Загрузка пройдет на коммутаторе, 
+<p>настройки которого указаны в таблице справа  "Текущие настройки подключения".</p>
+<p> Номер консольного порта можно настроить в меню <a href="/constants"> НАСТРОЙКИ</a></p>
 
 <table border="1">
     <caption>Список имеющихся файлов конфигурации </caption>
@@ -29,7 +27,9 @@
         </tr>
     {% endfor %}
 </table>
-
+<br><hr><br>
+Здесь будет показан ход конфигурации
+<br>
 
 <br>
 <body>
@@ -62,13 +62,14 @@
     </script>
 </body>
 
-
-
-    {% for cat, msg in get_flashed_messages(True) %}
-        <div class="flash {{cat}}">{{msg}}</div>
-    {% endfor %}
-
+{% for cat, msg in get_flashed_messages(True) %}
+    <div class="flash {{cat}}">{{msg}}</div>
+{% endfor %}
+<br>
+<br>
 {{ result }}
-
+<br>
+<br>
+<a class="button"  href="/upload_file_cfg">Назад</a>
 
 {% endblock %}
