--- a/manage_app2/templates/upload_file_cfg.html
+++ b/manage_app2/templates/upload_file_cfg.html
@@ -2,10 +2,12 @@
 
 {% block content %}
     {{ super() }}
-    
-
+<br>   
+<p>На этой странице с помощью кнопки Просмотр файла можно</p>
+<p>просмотреть содежимое конфигурационного файла</p>
     <table border="1">
         <caption>Список имеющихся файлов конфигурации </caption>
+        <br 
         <tr>
             <th>Имя файла</th><th>Действие</th>
         </tr>
@@ -16,8 +18,6 @@
             </tr>
         {% endfor %}
     </table>
-    
-
     <br>
     Загрузить новый файл в базу конфигов
     <br>
@@ -27,16 +27,18 @@
       <input type=submit value=Upload>
     </form>
     <br>
-    
+    <p>По ссылке ниже - доступна возможность залить выбранный конфиг на коммутатор:</p>
     <a href="{{ url_for('view_cfg_table') }}">Операции с файлом конфига</a>
-
-
-
-    {% for cat, msg in get_flashed_messages(True) %}
-        <div class="flash {{cat}}">{{msg}}</div>
-    {% endfor %}
-    <br>
-    <br>
+{{ result }}
+<br>
+<br>
+{% for cat, msg in get_flashed_messages(True) %}
+    <div class="flash {{cat}}">{{msg}}</div>
+{% endfor %}
+<br>
+<br>
 <a class="button"  href="/cfg">Назад</a>
-{{ result }} 
+<br>
+<br>
+ 
 {% endblock content%}
