--- a/manage_app2/templates/register.html
+++ b/manage_app2/templates/register.html
@@ -5,11 +5,22 @@
 {% for cat, msg in get_flashed_messages(True) %}
 <div class="flash" {{cat}}>{{msg}}</div>
 {% endfor %}
-<form action="/register" method="post" class="form-contact">
-    <p><label>ИМЯ </label> <input type="text" name="name" value="" required />
-    <p><label>Email </label> <input type="text" name="email" value="" required />
-    <p><label>ПАРОЛЬ </label> <input type="password" name="psw" value="" required />
-    <p><label>Repeat ПАРОЛЬ </label> <input type="password" name="psw2" value="" required />
-    <p><input type="submit" value="Registration" />
+ <form action="/register" method="POST" class="form-contact">
+    <!-- В цикле обработка полей из class RegistrationForm  -->
+    {% for field in form %}
+    <p><label>{{ field.label }} {% if field.flags.required %}*{% endif %}</label>
+    <p><label>{{ field }}</label> 
+        {% if field.errors %}
+            <ul class=errors>
+            <!-- В цикле обработка message из class RegistrationForm  -->
+            {% for error in field.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {% endfor %}
+<p><input type="submit" value="Registration" />
+<hr align=left width="300px">
 </form>
+
 {% endblock %}
