--- a/manage_app2/templates/base.html
+++ b/manage_app2/templates/base.html
@@ -16,7 +16,7 @@
             <div id="toplayer">
                 <img src="/static/images/logo_bulat2.jpg" width="279" height="50" alt="Логотип сайта">
             </div>
-            <title>Основные тесты коммутатора Trident.> - {{title}}</title>
+            <title>Основные категории тестов> - {{title}}</title>
         </head>
 
         {% block content -%}
