--- a/manage_app2/templates/base.html
+++ b/manage_app2/templates/base.html
@@ -45,7 +45,7 @@
                 {% if title -%}
                     <h1>{{title}}</h1>
                 {% else -%}
-                    <h1>Основные тесты коммутатора Trident</h1>
+                    <h1>Bulat tests</h1>
                 {% endif -%}
             </div>
 
