--- a/manage_app2/static/css/styles.css
+++ b/manage_app2/static/css/styles.css
@@ -144,12 +144,13 @@ details {
 }
 
 details > summary {
-  padding: 2px 6px;
+  padding: 10px 2px;
   width: 25em;
   background-color: #ddd;
   border: none;
   box-shadow: 10px 3px 4px black;
   cursor: pointer;
+  
 }
 
 details > p {
@@ -160,6 +161,8 @@ details > p {
   box-shadow: 3px 3px 4px black;
 }
 
-details[open] > summary {
-  background-color: #ccf;
+details summary::-webkit-details-marker {
+  background: red;
+  color: #fff;
+  font-size: 500%;
 }
