--- a/manage_app2/templates/gns_1.html
+++ b/manage_app2/templates/gns_1.html
@@ -67,7 +67,7 @@
 <div class="title">
 <br>
     Для досупа к последнему отчету в word-формате, правой кнопкой окройте ссылку ниже в новом окне. </div>
-<p><a href="file:/home/ssw/Documents/switches/report_doc/report_tests_GRE.docx" target="_blank">ОТЧЕТ по тесту в word</a></li>
+<p><a href="http:///switchtest.ddns.net/home/bulat/project_button/switches/report_doc/report_tests_GRE.docx" target="_blank">ОТЧЕТ по тесту в word</a></li>
 
 <br>
 <hr>
@@ -75,7 +75,7 @@
 <br>
     Для перехода на страницу с последним html-отчетом, правой кнопкой окройте ссылку ниже в новом окне.
     Откроется последний сохранненый в системе отчет: </div>
-<p><a href="file:///home/ssw/Documents/switches/manage_app2/templates/BULAT_TEST_TRIDENT_GRE.html" target="_blank">ОТЧЕТ по тесту в html</a></li>
+<p><a href="http://switchtest.ddns.net/home/bulat/project_button/switches/manage_app2/templates/BULAT_TEST_TRIDENT_GRE.html" target="_blank">ОТЧЕТ по тесту в html</a></li>
 <br>
 <hr>
     <p>Ниже находится кнопка запуска сервера отчетов сервера Allure:
@@ -91,7 +91,7 @@
     Для перехода на страницу с последним Allure-отчетом, правой кнопкой окройте ссылку ниже в новом окне.
     Откроется последний сохранненый в системе отчет: 
 </div>
-<p><a href='http://127.0.1.1:38671/index.html' target="_blank">ОТЧЕТ по тесту в Allure</a></li>
+<p><a href='http://switchtest.ddns.net:38671/index.html' target="_blank">ОТЧЕТ по тесту в Allure</a></li>
 <br>
 <hr>
 <div class="title"> Здесь может быть отчет о выполенном тесте!
