--- a/manage_app2/templates/template_test.html
+++ b/manage_app2/templates/template_test.html
@@ -25,17 +25,29 @@
     <hr>
     <div class="title">
     <br>
-        Для досупа к последнему отчету в word-формате, правой кнопкой окройте ссылку ниже в новом окне. </div>
+        Для досупа к последнему отчету в word-формате или html, откройте ссылку с именем нужного файла: </div>
     <!-- <p><a href="file:/home/ssw/Documents/switches/report_doc/report_tests_GRE.docx" target="_blank">ОТЧЕТ по тесту в word</a></li> -->
-    <p><a href={{report_dir}}/report_tests_GRE.docx target="_blank">ОТЧЕТ по тесту в word</a></li>
-    
+        <p>
+	<table border="2">
+            <caption>Список имеющихся файлов  </caption>
+            <br 
+            <tr>
+                <th>Имя файла</th><th>Действие</th>
+            </tr>
+            {% for i in items %}
+                <tr>
+                    <td><a href="{{ i }}" class="table-link">{{i}}</a></td>
+                    <td><a href="{{ url_for('get_file_report',filename = i) }}">Просмотр файла</a></td>
+                </tr>
+            {% endfor %}
+        </table>
     <br>
     <hr>
     <div class="title">
     <br>
         Для перехода на страницу с последним html-отчетом, правой кнопкой окройте ссылку ниже в новом окне.
         Откроется последний сохранненый в системе отчет: </div>
-    <p><a href="file:///home/ssw/Documents/switches/manage_app2/templates/BULAT_TEST_TRIDENT_GRE.html" target="_blank">ОТЧЕТ по тесту в html</a></li>
+    <p><a href="file:///home/bulat/project_button/switches/manage_app2/templates/BULAT_TEST_TRIDENT_GRE.html" target="_blank">ОТЧЕТ по тесту в html</a></li>
     <br>
     <hr>
         <p>Ниже находится кнопка запуска сервера отчетов сервера Allure:
