dont remove ip_eth0

--- a/backend/manage_app2/templates/index.html
+++ b/backend/manage_app2/templates/index.html
@@ -6,7 +6,7 @@
 {{ super() }}
 
 <h2>Выбор платформы, устройства, доступных тестов:</h2>
-
+<h1> Changes to review </h1>
 {%- block device_type -%}
 		<ul class="menu_tests">
 			{% for dev_t in device_type %}
